        PR c++/10929         * tree-inline.c (expand_call_inline): Don't warn about failing to         inline a function which was made inline by -finline-functions.         * cp/decl.c (grokfndecl): Don't mark a function inline for         -finline-functions if it isn't defined.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@68122 138bc75d-0d04-0410-961f-82ee72b054a4