gcc/tree-inline.c
@@ -1201,7 +1201,7 @@ expand_call_inline (tp, walk_subtrees, data)
        || !cgraph_global_info (fn)->inline_once)
       && !inlinable_function_p (fn, id, 0))
     {
-      if (warn_inline && DECL_INLINE (fn))
+      if (warn_inline && DECL_INLINE (fn) && !DID_INLINE_FUNC (fn))
 	{
 	  warning_with_decl (fn, "inlining failed in call to `%s'");
 	  warning ("called from here");
